--- a/src/components/header.scss
+++ b/src/components/header.scss
@@ -1,15 +1,19 @@
 @charset "utf-8";
 
+$main-color: #ffffff;
+
 .header {
   width: 100%;
   height: 80px;
   background-color: #242f9b;
-  color: #ffffff;
+  color: $main-color;
   display: flex;
   justify-content: space-between;
+
+  .sign-out-button {
+    color: $main-color;
+    margin: auto 25px auto auto;
+  }
 }
 
-.sign-out-button {
-  color: #ffffff;
-  margin: auto 25px auto auto;
-}
+
