--- a/src/pages/editTask.scss
+++ b/src/pages/editTask.scss
@@ -1,37 +1,38 @@
 @charset "utf-8";
 
+@mixin box1(
+  $color: #fff, 
+  $width: 80px,
+  $height: 40px,
+  $bRadius: 5px) {
+  color: $color;
+  width:$width;
+  height:$height;
+  border-radius:$bRadius;
+}
+
 .edit-task {
   width: 1000px;
   margin: 0 auto;
-}
-
-.edit-task-form {
-  color: #555555;
-}
-
-.edit-task-title,
-.edit-task-detail {
-  width: 300px;
-  margin-bottom: 25px;
-}
-
-.delete-task-button {
-  color: #ff3333;
-  border: solid 1px #ff3333;
-  width: 80px;
-  height: 40px;
-  margin: 25px 5px;
-  border-radius: 5px;
-}
-
-.edit-task-button {
-  background-color: #242f9b;
-  color: #ffffff;
-  width: 80px;
-  height: 40px;
-  border-radius: 5px;
-}
-
-.error-message {
-  color: #ff3333;
+  .error-message {
+    color: #ff3333;
+  }
+  .edit-task-form {
+    color: #555555;
+    .edit-task-title,
+    .edit-task-detail {
+      width: 300px;
+      margin-bottom: 25px;
+    }
+    .delete-task-button {
+      border: solid 1px #ff3333;
+      margin: 25px 5px;
+      @include box1($color:#ff3333);
+      $color: #fff,  
+ 
+    }
+    .edit-task-button {
+      @include box1;
+    } 
+  }
 }
