--- a/src/pages/editTask.scss
+++ b/src/pages/editTask.scss
@@ -1,11 +1,9 @@
 @charset "utf-8";
-
+$main-color:#ff3333;
 @mixin box1(
-  $color: #fff, 
   $width: 80px,
   $height: 40px,
   $bRadius: 5px) {
-  color: $color;
   width:$width;
   height:$height;
   border-radius:$bRadius;
@@ -14,24 +12,26 @@
 .edit-task {
   width: 1000px;
   margin: 0 auto;
+  
   .error-message {
-    color: #ff3333;
+    color: $main-color;
   }
   .edit-task-form {
     color: #555555;
+
     .edit-task-title,
     .edit-task-detail {
       width: 300px;
       margin-bottom: 25px;
     }
     .delete-task-button {
-      border: solid 1px #ff3333;
+      color: $main-color;
+      border: solid 1px $main-color;
       margin: 25px 5px;
-      @include box1($color:#ff3333);
-      $color: #fff,  
- 
+      @include box1;  
     }
     .edit-task-button {
+      color: #fff;
       @include box1;
     } 
   }
