--- a/src/pages/editList.scss
+++ b/src/pages/editList.scss
@@ -1,36 +1,35 @@
 @charset "utf-8";
+$main-color: #ff3333;
+@mixin box1{
+    width: 80px;
+    height: 40px;
+    border-radius: 5px;
+}
 
 .edit-list {
   width: 1000px;
   margin: 0 auto;
 
-.edit-list-form {
-  color: #555555;
-}
+  .error-message {
+    color: $main-color;
+  }
+  .edit-list-form {
+    color: #555555;
 
-.edit-list-title {
-  width: 300px;
-  margin-bottom: 25px;
-}
-
-.delete-list-button {
-  color: #ff3333;
-  border: solid 1px #ff3333;
-  width: 80px;
-  height: 40px;
-  margin: 25px 5px;
-  border-radius: 5px;
-}
-
-.edit-list-button {
-  background-color: #242f9b;
-  color: #ffffff;
-  width: 80px;
-  height: 40px;
-  border-radius: 5px;
-}
-
-.error-message {
-  color: #ff3333;
-}
+    .edit-list-title {
+      width: 300px;
+      margin-bottom: 25px;
+    }
+    .delete-list-button {
+      color: $main-color;
+      border: solid 1px $main-color;
+      margin: 25px 5px;
+      @include box1;
+    }
+    .edit-list-button {
+      background-color: #242f9b;
+      color: #ffffff;
+      @include box1
+    }
+  }
 }
