--- a/src/pages/newTask.scss
+++ b/src/pages/newTask.scss
@@ -3,31 +3,33 @@
 .new-task {
   width: 1000px;
   margin: 0 auto;
-}
 
-.new-task-form {
-  color: #555555;
-}
+  .error-message {
+    color: #ff3333;
+  }
+  .new-task-form {
+    color: #555555;
+    
+    .new-task-select-list{
+      width: 300px;
+      margin-bottom: 25px;
+    }
+    .new-task-title{
+      @extend .new-task-select-list;
+    }
+    .new-task-detail {
+      @extend .new-task-select-list;
+      height: 200px;
+    }
+    .new-task-button {
+      background-color: #242f9b;
+      color: #ffffff;
+      width: 80px;
+      height: 40px;
+      border-radius: 5px;
+    }
+  }
 
-.new-task-select-list,
-.new-task-title,
-.new-task-detail {
-  width: 300px;
-  margin-bottom: 25px;
-}
 
-.new-task-detail {
-  height: 200px;
-}
 
-.new-task-button {
-  background-color: #242f9b;
-  color: #ffffff;
-  width: 80px;
-  height: 40px;
-  border-radius: 5px;
-}
-
-.error-message {
-  color: #ff3333;
 }
