--- a/src/pages/signUp.scss
+++ b/src/pages/signUp.scss
@@ -3,29 +3,32 @@
 .signup {
   width: 500px;
   margin: 0 auto;
-}
-.signup-form {
-  margin: 25px 0;
-  color: #555555;
-}
 
-.email-input,
-.name-input,
-.password-input {
-  width: 100%;
-  font-size: large;
-  height: 30px;
-  margin-bottom: 25px;
+  .error-message {
+    color: #ff3333;
 }
+  .signup-form {
+    margin: 25px 0;
+    color: #555555;
 
-.signup-button {
-  background-color: #242f9b;
-  color: #ffffff;
-  width: 100px;
-  height: 40px;
-  border-radius: 5px;
-}
-
-.error-message {
-  color: #ff3333;
+    .email-input{
+      width: 100%;
+      font-size: large;
+      height: 30px;
+      margin-bottom: 25px;
+    }
+    .name-input{
+      @extend .email-input;
+    }
+    .password-input {
+      @extend .email-input;
+    }
+    .signup-button {
+      background-color: #242f9b;
+      color: #ffffff;
+      width: 100px;
+      height: 40px;
+      border-radius: 5px;
+    }
+  }
 }
