--- a/src/pages/signin.scss
+++ b/src/pages/signin.scss
@@ -3,33 +3,34 @@
 .signin {
   width: 500px;
   margin: 0 auto;
-}
 
-.signin-form {
-  margin: 25px 0;
-}
+  .error-message {
+    color: #ff3333;
+  }
+  .signin-form {
+    margin: 25px 0;
 
-.email-label,
-.password-label {
-  color: #555555;
-}
-
-.email-input,
-.password-input {
-  width: 100%;
-  font-size: large;
-  height: 30px;
-  margin-bottom: 25px;
-}
-
-.signin-button {
-  background-color: #242f9b;
-  color: #ffffff;
-  width: 100px;
-  height: 40px;
-  border-radius: 5px;
-}
-
-.error-message {
-  color: #ff3333;
+    .email-label{
+      color: #555555;
+    }
+    .email-input{
+      width: 100%;
+      font-size: large;
+      height: 30px;
+      margin-bottom: 25px;
+    }
+    .password-label {
+      @extend .email-label;
+    }
+    .password-input {
+      @extend .email-input;
+    }
+    .signin-button {
+      background-color: #242f9b;
+      color: #ffffff;
+      width: 100px;
+      height: 40px;
+      border-radius: 5px;
+    }
+  }
 }
