期限入力欄作成

--- a/src/pages/editTask.scss
+++ b/src/pages/editTask.scss
@@ -31,6 +31,7 @@ $main-color:#ff3333;
       @include box1;  
     }
     .edit-task-button {
+      background-color: #242f9b;
       color: #fff;
       @include box1;
     } 
