--- a/src/pages/editList.scss
+++ b/src/pages/editList.scss
@@ -10,16 +10,26 @@ $main-color: #ff3333;
 .edit-list {
   width: 1000px;
   margin: 0 auto;
+  @include sp{
+    width: 90%;
+    margin-top: 12px;
+  }
 
   .error-message {
     color: $main-color;
   }
   .edit-list-form {
     color: #555555;
+    @include sp{
+      margin-top: 30px;
+    }
 
     .edit-list-title {
       width: 300px;
       margin-bottom: 25px;
+      @include sp{
+        font-size: 16px;
+      }
     }
     .delete-list-button {
       color: $main-color;
