--- a/src/pages/home.scss
+++ b/src/pages/home.scss
@@ -6,6 +6,9 @@ $max:100%;
   margin: 50px auto;
   list-style: none;
   width: 1000px;
+  @include sp{
+    width: 90%;
+  }
 
   .error-message {
     color: #ff3333;
@@ -13,15 +16,28 @@ $max:100%;
   .list-header {
     display: flex;
     justify-content: space-between;
+    @include sp{
+      display: block;
+      text-align: center;
+    }
 
     .list-menu {
       text-align: right;
+      @include sp{
+        display: flex;
+        width: 300px;
+        margin: 0 auto;
+        justify-content: space-between;
+      }
     }
   }
   .list-tab {
     list-style: none;
     display: flex;
     overflow-x: auto;
+    @include sp{
+      margin: 10px;
+    }
 
     .list-tab-item {
       flex-shrink: 0;
@@ -32,26 +48,41 @@ $max:100%;
       border: solid 1px #242f9b;
       justify-content: center;
       align-items: center;  
-
-      .active {
-        background-color: #242f9b;
-        color: #ffffff;
+      @include sp{
+        padding: 10px;
+        font-size: 14px;
       }
+    }
+    .active {
+      background-color: #242f9b;
+      color: #ffffff;
     }
   }
   .tasks {
-    margin-top: 25px;
+    margin-top: 40px;
 
     .tasks-header {
       display: flex;
       justify-content: space-between;
+      @include sp{
+        display: block;
+        text-align: center;
+      }
     }
     .display-select-wrapper {
       width: 100px;
       margin: 0 0 25px auto;
+      @include sp{
+        margin-right: 10px;
+      }
 
       .display-select {
         width: $max;
+        @include sp{
+          height: 30px;
+          border-radius: 5px;
+          margin-top: 10px;
+        }  
       }
     }
     .task-item {
@@ -62,6 +93,10 @@ $max:100%;
       padding-left: 25px;
       font-size: large;
       border: solid 1px #ffffff;
+      margin-bottom: 10px;
+      @include sp{
+        font-size: 14px;
+      }
 
       .task-item-link {
         display: block;
@@ -69,6 +104,12 @@ $max:100%;
         height: $max;
         text-decoration: none;
         color: #000000;
+
+        p{
+          @include sp{
+            font-size: 12px;
+          }
+        }
       }
     }
   }
