--- a/src/pages/signin.scss
+++ b/src/pages/signin.scss
@@ -4,12 +4,19 @@
 .signin {
   width: 500px;
   margin: 0 auto;
+  @include sp{
+    width: 90%;
+    margin-top: 12px;
+  }
 
   .error-message {
     color: #ff3333;
   }
   .signin-form {
     margin: 25px 0;
+    @include sp{
+      text-align: center;
+    }
 
     .email-label{
       color: #555555;
@@ -19,6 +26,10 @@
       font-size: large;
       height: 30px;
       margin-bottom: 25px;
+      @include sp{
+        width: 90%;
+        font-size: 14px
+      }
     }
     .password-label {
       @extend .email-label;
