--- a/src/pages/editList.scss
+++ b/src/pages/editList.scss
@@ -14,6 +14,11 @@ $main-color: #ff3333;
     width: 90%;
     margin-top: 12px;
   }
+  @include tab{
+    width: 90%;
+    margin-top: 30px;
+    text-align: center;
+  }
 
   .error-message {
     color: $main-color;
@@ -28,6 +33,10 @@ $main-color: #ff3333;
       width: 300px;
       margin-bottom: 25px;
       @include sp{
+        font-size: 16px;
+      }
+      @include tab{
+        padding: 8px;
         font-size: 16px;
       }
     }
