--- a/src/pages/editTask.scss
+++ b/src/pages/editTask.scss
@@ -17,6 +17,11 @@ $main-color:#ff3333;
     width: 90%;
     margin-top: 12px;
   }
+  @include tab{
+    width: 90%;
+    margin-top: 30px;
+    text-align: center;
+  }
   
   .error-message {
     color: $main-color;
@@ -24,6 +29,9 @@ $main-color:#ff3333;
   .edit-task-form {
     color: #555555;
     @include sp{
+      margin-top: 30px;
+    }
+    @include tab{
       margin-top: 30px;
     }
 
@@ -34,6 +42,7 @@ $main-color:#ff3333;
     .edit-task-detail {
       @extend .edit-task-title;
       height: 80px;
+      
     }
     .delete-task-button {
       color: $main-color;
