--- a/src/pages/newList.scss
+++ b/src/pages/newList.scss
@@ -8,10 +8,18 @@
     width: 90%;
     margin-top: 12px;
   }
+  @include tab{
+    width: 90%;
+    margin-top: 30px;
+    text-align: center;
+  }
 
   .new-list-form {
     color: #555555;
     @include sp{
+      margin-top: 30px;
+    }
+    @include tab{
       margin-top: 30px;
     }
 
@@ -19,6 +27,10 @@
     width: 300px;
     margin-bottom: 25px;
     @include sp{
+      font-size: 16px;
+    }
+    @include tab{
+      padding: 8px;
       font-size: 16px;
     }
     }
