--- a/src/pages/home.scss
+++ b/src/pages/home.scss
@@ -23,13 +23,18 @@ $max:100%;
       display: block;
       text-align: center;
     }
+    @include tab{
+      display: block;
+      text-align: center;
+    }
+    
 
     .list-menu {
       text-align: right;
       @include sp{
         display: flex;
-        width: 300px;
-        margin: 0 auto;
+        width: 90%;
+        margin: 10px auto;
         justify-content: space-between;
       }
     }
@@ -71,20 +76,26 @@ $max:100%;
         display: block;
         text-align: center;
       }
+      @include tab{
+        display: block;
+        text-align: center;
+      }
     }
     .display-select-wrapper {
-      width: 100px;
       margin: 0 0 25px auto;
       @include sp{
-        margin-right: 10px;
+        display: flex;
+        width: 90%;
+        justify-content: space-between;
       }
-
+      @include tab{
+        text-align: right;
+      }
       .display-select {
-        width: $max;
+        width: 100px;
         @include sp{
           height: 30px;
           border-radius: 5px;
-          margin-top: 10px;
         }  
       }
     }
